Calculator and Primenumber

--- a/calculator7.html
+++ b/calculator7.html
@@ -5,80 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #output {
+            background-color: gray;
+            width: 480px;
+            padding: 10px;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 20px;
+            color: white;
+        }
+
+        button {
+            font-size: 20px;
+            background-color: white;
+            width: 100px;
+            height: 100px;
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>문자열 계산기 구현하기</h1>
+    <h1>JS 계산기</h1>
     <div>
-        <input type="text" id="input"><br>;
-        <button onclick="calc()">확인</button>;
+        <div id="output">0</div>
+        <div id="btn1">
+            <button id="7" onclick="clickNumbers(event)">7</button>
+            <button id="8" onclick="clickNumbers(event)">8</button>
+            <button id="9" onclick="clickNumbers(event)">9</button>
+            <button id="div" onclick="clickNumbers(event)">/</button>
+        </div>
+        <div id="btn2">
+            <button id="4" onclick="clickNumbers(event)">4</button>
+            <button id="5" onclick="clickNumbers(event)">5</button>
+            <button id="6" onclick="clickNumbers(event)">6</button>
+            <button id="mul" onclick="clickNumbers(event)">*</button>
+        </div>
+        <div id="btn3">
+            <button id="1" onclick="clickNumbers(event)">1</button>
+            <button id="2" onclick="clickNumbers(event)">2</button>
+            <button id="3" onclick="clickNumbers(event)">3</button>
+            <button id="sub" onclick="clickNumbers(event)">-</button>
+        </div>
+        <div id="btn4">
+            <button id="del" onclick="clickNumbers(event)">BS</button>
+            <button id="0" onclick="clickNumbers(event)">0</button>
+            <button id="eq" onclick="showResult(event)">=</button>
+            <button id="plus" onclick="clickNumbers(event)">+</button>
+        </div>
     </div>
     <div id="output">결과가 여기에 나옵니다.</div>
-    <script>
-        var input = {};
-
-        input.init = function(str) {
-            this.list = str.split(" ");
-        };
-
-        input.empty = function() {
-            return this.list.length === 0;
-        };
-
-        input.getValue = function() {
-            var str = this.list.shift();
-            var n = Number(str);
-            return n;
-        };
-
-        input.getOperator = function() {
-            var op = this.list.shift();
-            if (op === "+" || op === "-" || op === "*" || op === "/") {
-                return op;
-            } else {
-                return '$';
-            }
-        };
-
-        calculator = {};
-        calculator.calculate = function(first, second, op) {
-            var ret;
-            switch(op) {
-                case "+":
-                ret = first + second;
-                break;
-                case "-":
-                ret = first - second;
-                break;
-                case "*":
-                ret = first * second;
-                break;
-                case "/":
-                ret = first / second;
-                break;
-                default:
-                return NaN;
-            }
-            return ret;
-        };
-
-        var output = {};
-        output.out = document.getElementById('output');
-
-        output.print = function(value) {
-            this.out.innerHTML = '최종 결과값은 ' + value + '입니다.';
-        };
-
-        function calc() {
-            var str = document.getElementById('input').value;
-            input.init(str);
-            var result = input.getValue();
-            while (!input.empty()) {
-                var op = input.getOperator();
-                var second = input.getValue();
-                result = calculator.calculate(result, second, op);
-            }
-            output.print(result);
-        };
+    <script src="calc-gui.js">
     </script>
 
 </body>
